# ogp

./: .editorconfig  .gitignore  Cargo.toml  README.md  rustfmt.toml
.github/workflows/: ci.yml
src/: builder.rs  convert.rs  error.rs  lib.rs  main.rs  validator.rs
src/metadata/: audio.rs  builder.rs  image.rs  mod.rs  video.rs
src/object_type/: article.rs  book.rs  mod.rs  music.rs  profile.rs  video.rs  website.rs
src/utils/: mod.rs
